_assets/stylesheets/style.css.sass
$primary: #069

a
  font-weight: bold
  color: $primary

a:hover
  color: darken($primary, 10)
  text-decoration: none

#sidebar
  margin-left: 0

#content
  margin-left: 0

h1.title a
  color: #000

.help
  font-size: 120%
  padding-top: 10px

.centered
  text-align: center

.sticky
  position: fixed
  width: 200px
  top: 5px
  -webkit-transform: translateZ(0)
  -moz-transform: translateZ(0)
  -ms-transform: translateZ(0)
  -o-transform: translateZ(0)
  transform: translateZ(0)

.fork-badge
  position: absolute
  top: 0
  right: 0

.header
  margin-top: 15px
  font-size: 14px

.intro
  margin-top: 10px
  color: #444

.hint
  font-size: 90%
  color: #ccc

a.title
  font-weight: bold
  font-size: 26px
  color: #000

.extension-counter
  float: right
  margin-top: -20px
  color: #ccc

.label-pink
  background-color: $primary

